<?xml version="1.0" encoding="UTF-8"?>
<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
    <modelVersion>4.0.0</modelVersion>
    
    <groupId>org.apdplat</groupId>
    <artifactId>superword</artifactId>
    <version>1.0</version>
    <packaging>jar</packaging>
    
    <name>superword</name>
    <url>https://github.com/ysc/superword</url>
    <description>
        superword是一个Java实现的英文单词分析软件，主要研究英语单词音近形似转化规律、前缀后缀规律、词之间的相似性规律等等。
    </description>
    <organization>
        <name>APDPlat</name>
        <url>http://apdplat.org/</url>
    </organization>
    <licenses>
        <license>
            <name>GNU GENERAL PUBLIC LICENSE, Version 3</name>
            <url>http://www.gnu.org/licenses/gpl.html</url>
        </license>
    </licenses>
    <inceptionYear>2014</inceptionYear>
    <scm>
        <url>https://github.com/ysc/superword</url>
        <connection>scm:git:git://github.com/ysc/superword</connection>
        <developerConnection>scm:git:ssh://git@github.com/ysc/superword.git</developerConnection>
        <tag>HEAD</tag>
    </scm>
    <developers>
        <developer>
            <name>杨尚川</name>
            <email>ysc@apdplat.org</email>
            <url>http://yangshangchuan.iteye.com</url>
        </developer>
    </developers>
  
    <properties>
        <junit.version>4.11</junit.version>
        <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
        <maven.compiler.source>1.8</maven.compiler.source>
        <maven.compiler.target>1.8</maven.compiler.target>
        <commons-lang.version>2.6</commons-lang.version>
        <tika.version>1.7</tika.version>
        <slf4j-api.version>1.6.4</slf4j-api.version>
        <logback-classic.version>0.9.28</logback-classic.version>
        <jsoup.version>1.8.1</jsoup.version>
        <htmlunit.version>2.14</htmlunit.version>
        <jcl-over-slf4j.version>1.6.4</jcl-over-slf4j.version>
    </properties>
    
    <dependencies>
        <dependency>
            <groupId>junit</groupId>
            <artifactId>junit</artifactId>
            <version>${junit.version}</version>
            <scope>test</scope>
        </dependency>
        <dependency>
            <groupId>commons-lang</groupId>
            <artifactId>commons-lang</artifactId>
            <version>${commons-lang.version}</version>
        </dependency>
        <dependency>
            <groupId>org.apache.tika</groupId>
            <artifactId>tika-core</artifactId>
            <version>${tika.version}</version>
        </dependency>
        <dependency>
            <groupId>org.apache.tika</groupId>
            <artifactId>tika-parsers</artifactId>
            <version>${tika.version}</version>
            <exclusions>
                <exclusion>
                    <groupId>commons-logging</groupId>
                    <artifactId>commons-logging</artifactId>
                </exclusion>
            </exclusions>
        </dependency>
        <!-- SLF4J日志框架API -->
        <dependency>
            <groupId>org.slf4j</groupId>
            <artifactId>slf4j-api</artifactId>
            <version>${slf4j-api.version}</version>
        </dependency>
        <!-- LOGBACK日志实现提供者 -->
        <dependency>
            <groupId>ch.qos.logback</groupId>
            <artifactId>logback-classic</artifactId>
            <version>${logback-classic.version}</version>
            <exclusions>
                <exclusion>
                    <groupId>commons-logging</groupId>
                    <artifactId>commons-logging</artifactId>
                </exclusion>
            </exclusions>
            <optional>true</optional>
            <scope>runtime</scope>
        </dependency>
        <dependency>
            <groupId>org.jsoup</groupId>
            <artifactId>jsoup</artifactId>
            <version>${jsoup.version}</version>
        </dependency>
        <dependency>
            <groupId>net.sourceforge.htmlunit</groupId>
            <artifactId>htmlunit</artifactId>
            <version>${htmlunit.version}</version>
            <exclusions>
                <exclusion>
                    <groupId>commons-logging</groupId>
                    <artifactId>commons-logging</artifactId>
                </exclusion>
            </exclusions>
        </dependency>
        <!-- 拦截 apache commons logging -->
        <dependency>
            <groupId>org.slf4j</groupId>
            <artifactId>jcl-over-slf4j</artifactId>
            <version>${jcl-over-slf4j.version}</version>
        </dependency>
    </dependencies>
</project>